@@ -84,6 +84,7 @@
 66. Enable retina support for all builds.
 67. Store replaygain settings in Cantata's config file, as it appears MPD does
     not persist changes.
+68. If HTTP requests are redirected, copy over original headers.
 
 2.0.1
 -----
